syntax = "proto3";

enum PaymentMode {
    paytm = 0;
    phonepe = 1;
    debitCard = 2;
    cod = 3;
    amazonPay = 4;
    gPay = 5;
}

message Payments {
    string id = 1;
    string transactionId = 2;
    PaymentMode paymentMode = 3;
    float paymentAmount = 4;
    int32 orderId = 5;
}

message PaymentReq {
    Payments payment = 1;
}

message PaymentRes {
    Payments payment = 1;
}

message GetPaymentByTIDReq {
    string transactionId = 1;
}

message GetPaymentByModeReq {
    string paymentMode = 1;
}

message MultiPaymentRes {
    repeated Payments payments = 1;
}

service PaymentService {
    rpc AddPayment(PaymentReq) returns (PaymentRes);
    rpc GetPaymentByMode(GetPaymentByModeReq) returns (MultiPaymentRes);
    rpc GetPaymentByTID(GetPaymentByTIDReq) returns (PaymentRes);
}